<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/windowBackground">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_to_your_info"
            android:textSize="15sp"
            android:textColor="#202020"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="55dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp">


            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:autofillHints=""
                android:minHeight="48dp"
                />
            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/editTextConfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/confirme_password"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:minHeight="48dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:minHeight="48dp" />
    </LinearLayout>
</ScrollView>

