<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SinginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textwelcom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/welcome_back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:text="@string/please" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="17dp" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="17dp" />

            <!-- Add Forget Password TextView -->

            <TextView
                android:id="@+id/forgetPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#49BCE7"
                android:clickable="true"
                android:onClick="onForgetPasswordClick"
                android:paddingTop="8dp"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!-- Add Sign In Button -->

            <!-- Add Sign Up -->

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:onClick="onLoginClick"
                android:rotationX="0"
                android:text="@string/login" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onSignUpClick"
                android:paddingTop="16dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
